pilot/pkg/config/kube/ingressv1/testdata/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: ns
  annotations:
    istio.io/gateway.selector: "istio=ingressgateway-foo"
spec:
  rules:
    - host: foohost.bar.com
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 4200
