pilot/pkg/config/kube/ingressv1/testdata/overlay.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: ns
spec:
  rules:
    - host: foohost.bar.com
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 4200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo2
  namespace: ns
spec:
  rules:
    - host: foohost.bar.com
      http:
        paths:
          - path: /second
            backend:
              service:
                name: service2
                port:
                  number: 4200
