pilot/pkg/config/kube/ingressv1/testdata/tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls
  namespace: bar
spec:
  rules:
  - host: foo.org
    http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /*
  tls:
  - hosts:
      - foo.org
    secretName: myingress-cert
