pilot/pkg/config/kube/ingressv1/testdata/tls.yaml.golden
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: foo-org-tls-istio-autogenerated-k8s-ingress
  namespace: bar
spec:
  gateways:
  - istio-system/tls-istio-autogenerated-k8s-ingress
  hosts:
  - foo.org
  http:
  - match:
    - uri:
        prefix: ""
    route:
    - destination:
        host: httpbin.bar.svc.mydomain
        port:
          number: 80
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  creationTimestamp: null
  name: tls-istio-autogenerated-k8s-ingress
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - foo.org
    port:
      name: https-443-ingress-tls-bar-0
      number: 443
      protocol: HTTPS
    tls:
      credentialName: myingress-cert
      mode: SIMPLE
  - hosts:
    - '*'
    port:
      name: http-80-ingress-tls-bar
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
---
